[tool.poetry]
name = "twitter-aggregator"
version = "0.1.0"
description = ""
authors = ["Piotr Szyma <thompson2908@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
toml = "^0.10.2"
types-toml = "^0.10.8"
dacite = "^1.6.0"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
requests = "^2.28.1"
python-twitter = "^3.5"
types-requests = "^2.28.10"
flake8 = "^5.0.4"
requests-cache = "^0.9.6"
pdbpp = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = 'venv'

[tool.isort]
profile = "black"
multi_line_output = 3
